# 3dv_tutorial

./: .gitignore  3dv_tutorial.sln  CMakeLists.txt  HOWTO_RUN.md  HOWTO_RUN_CPP.md  HOWTO_RUN_PYTHON.md  LICENSE  README.md  README.mdk  requirements.txt  video_stabilization.vcxproj
calibration/: camera_calibration_v2.py  corner.py  fisheye_calibration_v1.py  pybackend2.cpython-38-x86_64-linux-gnu.so.2  pybackend2.cpython-38-x86_64-linux-gnu.so.2.45.0  pyrealsense2.cpython-38-x86_64-linux-gnu.so.2.45  pyrealsense2.cpython-38-x86_64-linux-gnu.so.2.45.0
data/: image_formation0.xyz  image_formation1.xyz  image_formation2.xyz  image_formation3.xyz  image_formation4.xyz
examples/: 3d_rotation_conversion.cpp  3d_rotation_conversion.py  affine_estimation.py  affine_estimation_implement.py  bundle_adjustment.cpp  bundle_adjustment.py  bundle_adjustment_global.cpp  bundle_adjustment_inc.cpp  camera_calibration.cpp  camera_calibration.ipynb  camera_calibration.py  camera_calibration_implement.py  camera_calibration_implement_k1.py  distortion_correction.cpp  distortion_correction.py  distortion_visualization.py  epipolar_line_visualization.py  feature_matching.py  feature_tracking_klt.py  fisheye_virtual_ptz.py  fundamental_mat_estimation.py  fundamental_mat_estimation_implement.py  harris_corner_implement.py  homography_estimation_implement.py  homography_estimation_ransac.py  image_formation.cpp  image_formation.py  image_stitching.cpp  image_stitching.py  image_stitching_implement.py  image_warping.py  image_warping_implement.py  line_fitting_m_est.cpp  line_fitting_m_estimator.py  line_fitting_ransac.cpp  line_fitting_ransac.py  object_localization.cpp  object_localization.py  perspective_correction.cpp  perspective_correction.py  (+19 more)
examples_jupyter/: distortion_correction.ipynb  image_formation.ipynb  object_localization.ipynb  pose_estimation_chessboard.ipynb
msvs/: 3dv_tutorial.sln
scripts/: DLT_calib.py  DLT_epipolar_line.py  bundle_adjustment_inc.py  image_formation.py  perspective_correction.py  pose_estimation_book1.py  pose_estimation_book2.py  pose_estimation_book3.py  sfm_global(camera).xyz  sfm_global(point).xyz  sfm_global(rgb).xyz  sfm_global.py  sfm_inc.py  triangulation.py  vo_epipolar.py
src/: bundle_adjustment.cpp  bundle_adjustment.hpp  bundle_adjustment_batch.cpp  bundle_adjustment_global.cpp  (+28 more)
(+32 files in other folders)
